Unneeded g_object_unref dropped

It caused crash - the resource is not owned.
https://bugzilla.gnome.org/show_bug.cgi?id=612341